
2012-12-31
- bios/serport.c bios/serport.h: Refactored serial port support, based on
  previous patch by Vincent Riviere. (RFB)

2013-01-01
- bios/blkdev.c bios/blkdev.h bios/disk.c bios/floppy.c bios/xhdi.c:
  Minor code refactor / clean up prior to IDE changes. (RFB)
- util/string.c util/string.h: Added strlcpy() for use by IDE code. (RFB)
- bios/psg.h: Fix typo in #define. (RFB)

2013-01-03
- bios/ctrycodes.h tools/tos-lang-change.c: Removed Slovak Republic country code
  as it is currently unused. (VRI)

2013-01-07
- bios/bios.c bios/vectors.S bios/xbios.c: Fixed crash when BIOS or XBIOS are
  called with a function number greater than 32767. Bug reported by Olivier
  Landemarre. (VRI)

2013-01-15
- bios/serport.c: Fix bug: SCC serial I/O routines do not always delay after
  accessing SCC. (RFB)

2013-01-17
- bdos/mem.h bios/biosmem.h include/memdefs.h: Code cleanup: eliminate
  duplicate definitions of MD & MPB. (RFB)

2013-01-18
- bios/iorec.h bios/mfp.c tools/bug.c tools/compr.c tools/tounix.c
  tools/uncompr.c util/nlsasm.S: Changed the copyright owner from "Laurent
  Vogel" to "EmuTOS development team". (VRI)
- bios/ctrycodes.h tools/tos-lang-change.c: Reverted Russia country code to 19,
  as FreeMiNT people agreed to keep it as the official standard. (VRI)

2013-01-19
- bdos/mem.h bdos/osmem.c: Issue error message & halt when internal OS memory
  is exhausted. (RFB)
- doc/osmemory.txt: Add documentation on internal OS memory. (RFB)

2013-01-20
- bios/scc.h bios/serport.c: Moved struct for SCC chip to new header. (RFB)
- bios/bios.c bios/machine.c bios/startup.s include/config.h: Do not use
  reset instruction if compiling for EmuTOS RAM. (RFB)
- po/POTFILES.in: Add osmem.c to list of files with _(...) macro. (RFB)

2013-01-21
- cli/command.c: Minor improvements to displayed text strings. (RFB)
- cli/command.c: Fix MV command to move rather than copy. (RFB)
- bios/disk.c bios/disk.h bios/ide.c: Add support for not-byteswapped
  disk partitions. (RFB)